Opened 14 years ago

Closed 3 years ago

#6932 closed bug (fixed)

Two errors with the Pairs application

Reported by: Karvjorm Owned by: nobody
Priority: normal Milestone: R1/beta4
Component: Applications Version: R1/alpha2
Keywords: Pairs Cc: Karvjorm
Blocked By: Blocking:
Platform: All

Description

Again I found some errors when playing with the Pairs application.

The first one occured when I had the basic layout. I have found already some pairs and selected a not-selected coordinate. When picture under coordinate was shown, I started to move on mouse pointer and when it was hovering over another not-selected coordinate, picture suddenly showed though I had not clicked that coordinate. When I continued to move on mouse pointer, that picture was hidden again and after a while I was able to click another not-selected coordinate. I was just like application hinted that there was that kind of picture in that coordinate.

Another error occured when I started application in 8x8 layout and selected the first coordinate on the top-left corner. Next I selected coordinate at the bottom-right corner. They were not pairs but anyway, selection stayed and I could quite easily take a screenshot included here.

Attachments (12)

Pairs8x8Error.png (23.8 KB ) - added by Karvjorm 14 years ago.
Selection error in Pairs application
Pairs8x8Error2.png (26.2 KB ) - added by Karvjorm 14 years ago.
The next phase in faulty Pairs session.
Pairs8x8Error3.png (17.9 KB ) - added by Karvjorm 14 years ago.
Third phase after selecting new from the Peli menu
Pairs.patch (7.0 KB ) - added by Karvjorm 13 years ago.
Case break change, New game intializations, Style cleanups
pairs-error-6932-1.jpg (115.3 KB ) - added by Karvjorm 10 years ago.
After the completed game one square is still hidden
pairs-error-6932-2.jpg (96.6 KB ) - added by Karvjorm 10 years ago.
Lets find the pair of this square
pairs-error-6932-3.jpg (104.0 KB ) - added by Karvjorm 10 years ago.
The pair should be here, shouldn't it
pairs-error-6932-4.jpg (99.1 KB ) - added by Karvjorm 10 years ago.
What the ...! One pair is missing
pairs-error-0.jpg (119.9 KB ) - added by Karvjorm 10 years ago.
Phase 1: 3rd last one (the printed circuit board on the right) was clicked, but …
pairs-error-1.jpg (131.6 KB ) - added by Karvjorm 10 years ago.
Phase 2: the 3rd one reverted after a delay to the orginal state. Not (fixed) visible even after the multiple clicks.
pairs-error-2.jpg (120.5 KB ) - added by Karvjorm 10 years ago.
Phase 3: The 1st item of the last pair is selected.
pairs-error-3.jpg (112.9 KB ) - added by Karvjorm 10 years ago.
Phase 4: The last one was clicked.

Download all attachments as: .zip

Change History (25)

by Karvjorm, 14 years ago

Attachment: Pairs8x8Error.png added

Selection error in Pairs application

comment:1 by Karvjorm, 14 years ago

In the session showed in the picture the right-bottom coordinate disappeared when I clicked some other coordinate, but the picture at left-top coordinate stayed. The next click did nothing but after that I could continue as usual, except that there was one odd pair pictures with one picture in pair.

by Karvjorm, 14 years ago

Attachment: Pairs8x8Error2.png added

The next phase in faulty Pairs session.

comment:2 by Karvjorm, 14 years ago

In syslog (/var/log/syslog) I was able to find the following kind error messages:

KERN: ps2: strange mouse data, x-delta 255, trying resync
KERN: ps2: strange mouse data, x/y overflow, trying resync
KERN: ps2: bad mouse data, trying resync

Also, this continued and the first line above told sometimes about y-delta -126, x-delta -177, y-delta -255 etc. I'm using touchpad of my laptop as a mouse.

Last edited 14 years ago by Karvjorm (previous) (diff)

by Karvjorm, 14 years ago

Attachment: Pairs8x8Error3.png added

Third phase after selecting new from the Peli menu

comment:3 by Karvjorm, 14 years ago

The next error occured when I decided to stop and selected a new game from the "Peli" menu. The enclosed Pairs8x8Error3.png file shows that picture at the top-left coordinate did not disappear !

by Karvjorm, 13 years ago

Attachment: Pairs.patch added

Case break change, New game intializations, Style cleanups

comment:4 by Karvjorm, 13 years ago

patch: 01

comment:5 by humdinger, 13 years ago

After applying your patch, the playing cards aren't turned on a click when starting another game after finishing the initial one, or you change the board size to advanced etc.

in reply to:  5 comment:6 by Karvjorm, 13 years ago

Replying to humdinger:

After applying your patch, the playing cards aren't turned on a click when starting another game after finishing the initial one, or you change the board size to advanced etc.

Oops, I did no test it then... Can I delete this patch?

comment:7 by Karvjorm, 13 years ago

patch: 10

comment:8 by pulkomandy, 10 years ago

I can't reproduce the problems here. Do they still happen?

comment:9 by Karvjorm, 10 years ago

Yes, I recently got even new pictures about this bug, but I made a pgkman update for may Haiku installation after it and cannot boot that partition (with the picture files) any more.

by Karvjorm, 10 years ago

Attachment: pairs-error-6932-1.jpg added

After the completed game one square is still hidden

by Karvjorm, 10 years ago

Attachment: pairs-error-6932-2.jpg added

Lets find the pair of this square

by Karvjorm, 10 years ago

Attachment: pairs-error-6932-3.jpg added

The pair should be here, shouldn't it

by Karvjorm, 10 years ago

Attachment: pairs-error-6932-4.jpg added

What the ...! One pair is missing

by Karvjorm, 10 years ago

Attachment: pairs-error-0.jpg added

Phase 1: 3rd last one (the printed circuit board on the right) was clicked, but ...

by Karvjorm, 10 years ago

Attachment: pairs-error-1.jpg added

Phase 2: the 3rd one reverted after a delay to the orginal state. Not (fixed) visible even after the multiple clicks.

comment:10 by Karvjorm, 10 years ago

I tried to add 2 more pictures that describe this error, but Trac is considering it as a spam :-(

by Karvjorm, 10 years ago

Attachment: pairs-error-2.jpg added

Phase 3: The 1st item of the last pair is selected.

by Karvjorm, 10 years ago

Attachment: pairs-error-3.jpg added

Phase 4: The last one was clicked.

comment:11 by dsizzle, 9 years ago

I can't be sure if I'm seeing _all_ of the problems, but I can reproduce one issue 100% with these steps:

  1. start Pairs
  2. click on one card
  3. Choose File->New game

the card you left exposed when the game was restarted will now behave oddly when clicked. If you click it to turn the card over, after a moment it'll flip itself back. Then if you click it again, it'll stay as a ? and not flip. If you click a few more times it'll flip over, and stay flipped no matter what other cards you click.

I am going to try to fix the issue.

comment:12 by pulkomandy, 5 years ago

Milestone: R1R1.1

comment:13 by waddlesplash, 3 years ago

Milestone: R1.1R1/beta4
Resolution: fixed
Status: newclosed

Fix merged in hrev55923.

Note: See TracTickets for help on using tickets.